# ISSM

./: configure.ac
examples/mismip_reduced/: interpBedmachineAntarctica_v1.py  interpMouginotAnt2017.py
src/m/classes/: sampling.py
